Fix AI share link: add ai-share note page for online visitors

--- a/skills.html
+++ b/skills.html
@@ -238,7 +238,7 @@
         <ul>
           <li><strong>风险团队内部 AI Agent 分享教学</strong>：在团队内进行了一次 AI Agent 分享与教学，以「哈利波特」主题落地演示，含 Remotion 片头与互动式分享结构。</li>
         </ul>
-        <p class="card-cta-wrap"><a href="../../../12-agent_finalize/11-AI_Sharing/AI_Share_Portable_20260209/AI_Share_HarryPotter_V4%20-%20%E5%89%AF%E6%9C%AC.html" target="_blank" rel="noopener" class="card-cta">查看分享页 &rarr;</a></p>
+        <p class="card-cta-wrap"><a href="ai-share/index.html" class="card-cta">查看说明与本地打开方式 &rarr;</a></p>
       </div>
     </div>
   </div>
