--- a/ai-share/index.html
+++ b/ai-share/index.html
@@ -1349,5 +1349,6 @@ button,a,.btn-gold,.btn-maroon,.detail-back,.open-ext,.nav-bar button{cursor:url
   };
 })();
 </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
