--- a/ai-share/materials/OFW/OFW_计件绩效方案_Proposal (2).html
+++ b/ai-share/materials/OFW/OFW_计件绩效方案_Proposal (2).html
@@ -653,7 +653,7 @@
                 <table>
                     <tr><th>Agent</th><th>计件激励 (PHP)</th><th>总薪资 (PHP)</th></tr>
                 <tr>
-                    <td><b>pom</b></td>
+                    <td><b>Agent_A</b></td>
                     <td>2,672</td>
                     <td style="color:#f39c12;font-weight:bold">20,672</td>
                 </tr>
@@ -713,12 +713,12 @@
                 <table>
                     <tr><th>Agent</th><th>计件激励 (PHP)</th><th>总薪资 (PHP)</th></tr>
                 <tr>
-                    <td><b>pom</b></td>
+                    <td><b>Agent_A</b></td>
                     <td>3,075</td>
                     <td style="color:#27ae60;font-weight:bold">21,075</td>
                 </tr>
                 <tr>
-                    <td><b>santos15</b></td>
+                    <td><b>Agent_B</b></td>
                     <td>2,925</td>
                     <td style="color:#f39c12;font-weight:bold">20,925</td>
                 </tr>
@@ -778,17 +778,17 @@
                 <table>
                     <tr><th>Agent</th><th>计件激励 (PHP)</th><th>总薪资 (PHP)</th></tr>
                 <tr>
-                    <td><b>pom</b></td>
+                    <td><b>Agent_A</b></td>
                     <td>3,027</td>
                     <td style="color:#27ae60;font-weight:bold">21,027</td>
                 </tr>
                 <tr>
-                    <td><b>beapa</b></td>
+                    <td><b>Agent_C</b></td>
                     <td>2,933</td>
                     <td style="color:#f39c12;font-weight:bold">20,933</td>
                 </tr>
                 <tr>
-                    <td><b>santos15</b></td>
+                    <td><b>Agent_B</b></td>
                     <td>2,843</td>
                     <td style="color:#f39c12;font-weight:bold">20,843</td>
                 </tr>
@@ -1150,14 +1150,14 @@
     <table>
         <tr><th>#</th><th>Agent</th><th>在案</th><th>催回</th><th>回收率</th><th>计件激励</th><th>总薪资</th></tr>
             <tr>
-                <td>1</td><td><b>pom</b></td>
+                <td>1</td><td><b>Agent_A</b></td>
                 <td>343</td><td>55</td>
                 <td>16.0%</td>
                 <td>3,075</td>
                 <td style="color:#27ae60;font-weight:bold">21,075</td>
             </tr>
             <tr>
-                <td>2</td><td><b>santos15</b></td>
+                <td>2</td><td><b>Agent_B</b></td>
                 <td>265</td><td>58</td>
                 <td>21.9%</td>
                 <td>2,925</td>
@@ -1190,5 +1190,6 @@
 </div>
 
 </div>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
