--- a/cases/collection-inspection.html
+++ b/cases/collection-inspection.html
@@ -609,5 +609,6 @@ rate = &Sigma; w_curr &times; (r_curr - r_prev)
       navLinks.forEach(a => a.classList.toggle('active',a.dataset.section===c));
     });
   </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
