--- a/cases/ofw-strategy.html
+++ b/cases/ofw-strategy.html
@@ -766,5 +766,6 @@ final_incentive = <span class="func">MIN</span>(agent_incentive, <span class="or
       chip.addEventListener('keydown', function(e) { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); this.click(); } });
     });
   </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
