--- a/cases/risk-prediction.html
+++ b/cases/risk-prediction.html
@@ -737,5 +737,6 @@ hc_merge[<span class="str">'c_cnt'</span>] = deal_listcnt * c_rate * if_stop
       });
     });
   </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
