--- a/index.html
+++ b/index.html
@@ -495,5 +495,6 @@
       navLinks.forEach(a => { a.classList.toggle('active', a.dataset.section===current); });
     });
   </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
