--- a/methodology/index.html
+++ b/methodology/index.html
@@ -406,5 +406,6 @@
       navLinks.forEach(a => a.classList.toggle('active', a.dataset.section === c));
     });
   </script>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
