--- a/cases/reports/OFW_计件绩效方案_Proposal_1.html
+++ b/cases/reports/OFW_计件绩效方案_Proposal_1.html
@@ -949,14 +949,14 @@
     <table>
         <tr><th>#</th><th>Agent</th><th>在案</th><th>催回</th><th>回收率</th><th>计件激励</th><th>总薪资</th></tr>
             <tr>
-                <td>1</td><td><b>pom</b></td>
+                <td>1</td><td><b>Agent_A</b></td>
                 <td>343</td><td>55</td>
                 <td>16.0%</td>
                 <td>3,075</td>
                 <td style="color:#27ae60;font-weight:bold">21,075</td>
             </tr>
             <tr>
-                <td>2</td><td><b>santos15</b></td>
+                <td>2</td><td><b>Agent_B</b></td>
                 <td>265</td><td>58</td>
                 <td>21.9%</td>
                 <td>2,925</td>
@@ -989,5 +989,6 @@
 </div>
 
 </div>
+<script src="/auth-guard.js"></script>
 </body>
 </html>
